--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
   </head>
   <body>
+
+    <!-- third section starts here -->
+
+    <section class="third-section iphone-section text-center pt-5">
+      <h2 class="fw-bold m-0 pt-md-2 fs-2">iPhone 11</h2>
+      <p class="fw-light my-1 my-md-2 fs-4">
+        Just the right amount of everything.
+      </p>
+      <p class="text-black-50 fs-5">
+        From $16.62/mo. or $399 with trade‑in.
+      </p>
+      <div class="links">
+        <a href="#" class="fs-4">Learn more</a>
+        <a href="#" class="fs-4">Buy</a>
+      </div>
+    </section>
+
+    <!-- third section ends here -->
+
+
+
+
+
     <!-- starting of footer section -->
 
       <footer class="footer-wrapper">
