html tage and css fourthsection

--- a/index.html
+++ b/index.html
@@ -15,7 +15,87 @@
   </head>
   <body>
     <!-- starting of footer section -->
-
+ <!-- fourth section -->
+    <section class="fourth-section text-center container-fluid">
+      <div class="row gap-md-2">
+        <div class="product-1 product col-md mt-2">
+          <img
+            src="./images/icons/watch-series5-logo.png"
+            class="pt-md-2"
+            alt="watch-series-5 logo"
+          />
+          <p class="my-1 my-md-2 fs-4">
+            With the new Always-On Retina display. <br />
+            You’ve never seen a watch like this.
+          </p>
+          <div class="links">
+            <a href="#" class="fs-4">Learn more</a>
+            <a href="#" class="fs-4">Buy</a>
+          </div>
+        </div>
+        <div class="product-2 product col-md mt-2">
+          <img
+            src="./images/icons/apple-card-logo.png"
+            class="pt-md-2 mb-md-4"
+            alt="apple-card-logo"
+          />
+          <p class="my-2 fs-4">
+            Get 3% Daily Cash on purchases from <br />
+            Apple using Apple Card.
+          </p>
+          <div class="links">
+            <a href="#" class="fs-4">Learn more</a>
+            <a href="#" class="fs-4">Buy</a>
+          </div>
+        </div>
+      </div>
+      <div class="row gap-md-2">
+        <div
+          class="product-3 product col-md d-flex flex-column justify-content-between align-items-center mt-2"
+        >
+          <img
+            src="./images/icons/apple-tv-logo.png"
+            class="pt-md-2 mb-md-4"
+            alt="apple-tv-logo"
+          />
+          <div>
+            <img src="./images/icons/servant-logo.png" alt="servant-logo" />
+          </div>
+          <a href="#" class="fs-5">Watch the trailer </a>
+        </div>
+        <div class="product-4 product col-md mt-2">
+          <h2 class="fw-bold m-0 pt-md-3 fs-2">AirPods Pro</h2>
+          <p class="my-2 fs-4">Magic like you’ve never heard.</p>
+          <div class="links">
+            <a href="#" class="fs-4">Learn more</a>
+            <a href="#" class="fs-4">Buy</a>
+          </div>
+        </div>
+      </div>
+      <div class="row gap-md-2">
+        <div class="product-5 product col-md mt-2">
+          <p class="pt-md-2 m-0 text-black-50">16-inch model</p>
+          <h2 class="fw-bold m-0 fs-2">MacBook Pro</h2>
+          <p class="my-2 fs-4">The best of the brightest.</p>
+          <div class="links">
+            <a href="#" class="fs-4">Learn more</a>
+            <a href="#" class="fs-4">Buy</a>
+          </div>
+        </div>
+        <div class="product-6 product col-md my-2">
+          <img
+            src="../images/icons/new-ipad-logo.png"
+            class="pt-md-2 mb-md-1"
+            alt="new-ipad-logo"
+          />
+          <p class="my-2 fs-4">Like a computer. Unlike any computer.</p>
+          <div class="links">
+            <a href="#" class="fs-4">Learn more</a>
+            <a href="#" class="fs-4">Buy</a>
+          </div>
+        </div>
+      </div>
+    </section>
       <footer class="footer-wrapper">
         <div class="upper-text-container">
           <p>
