--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
   </head>
   <body>
 
+      <!--=== first section ===-->
+    <section class="first-section text-center mt-5 pt-4">
+      <div class="mt-lg-3">
+        <p class="text-black-50 m-0 fs-5">16-inch model</p>
+        <h1 class="fw-bold m-0 font-size-1">MacBook Pro</h1>
+        <p class="m-0 fs-3">The best for the brightest.</p>
+        <div class="links mb-4">
+          <a href="#" class="fs-4">Learn more</a>
+          <a href="#" class="fs-4">Buy</a>
+        </div>
+      </div>
+      <div>
+        <img src="./images/home/macbook-pro.jpg" />
+      </div>
+    </section>
+
     <!-- third section starts here -->
 
     <section class="third-section iphone-section text-center pt-5">
