Add some comment and structure on html

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
     </div>
 
     
-   <!-- section two starts here -->
-    <section class="iphone-section second-section text-center text-white pt-5">
+   
       <!--=== first section ===-->
     <section class="first-section text-center mt-5 pt-4">
       <div class="mt-lg-3">
@@ -88,20 +87,9 @@
         <img src="./images/home/macbook-pro.jpg" />
       </div>
     </section>
-
-    <!-- third section starts here -->
-
-    <section class="third-section iphone-section text-center pt-5">
-      <h2 class="fw-bold m-0 pt-md-2 fs-2">iPhone 11</h2>
-      <p class="fw-light my-1 my-md-2 fs-4">
-        Just the right amount of everything.
-      </p>
-      <p class="text-black-50 fs-5">
-        From $16.62/mo. or $399 with trade‑in.
 <!-- section two starts here -->
-
-<section class="iphone-section second-section text-center text-white pt-5">
-      <h2 class="fw-bold m-0 pt-md-2 fs-2">iPhone 11 Pro</h2>
+    <section class="iphone-section second-section text-center text-white pt-5">
+        <h2 class="fw-bold m-0 pt-md-2 fs-2">iPhone 11 Pro</h2>
       <p class="fw-light my-1 my-md-2 fs-4">
         Pro cameras. Pro display. Pro performance
       </p>
@@ -113,12 +101,26 @@
         <a href="#" class="fs-4">Buy</a>
       </div>
     </section>
-
    <!-- section two ends here -->
 
+    <!-- third section starts here -->
+
+     <section class="third-section iphone-section text-center pt-5">
+      <h2 class="fw-bold m-0 pt-md-2 fs-2">iPhone 11</h2>
+      <p class="fw-light my-1 my-md-2 fs-4">
+        Just the right amount of everything.
+      </p>
+      <p class="text-black-50 fs-5">
+        From $16.62/mo. or $399 with trade‑in.
+      </p>
+      <div class="links">
+        <a href="#" class="fs-4">Learn more</a>
+        <a href="#" class="fs-4">Buy</a>
+      </div>
+    </section>
 
 
-    <!-- starting of footer section -->
+
  <!-- fourth section -->
     <section class="fourth-section text-center container-fluid">
       <div class="row gap-md-2">
@@ -200,6 +202,8 @@
         </div>
       </div>
     </section>
+    
+    <!-- starting of footer section -->
       <footer class="footer-wrapper">
         <div class="upper-text-container">
           <p>
