--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Website</title>
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -203,245 +204,194 @@
       </div>
     </section>
     
-    <!-- starting of footer section -->
-      <footer class="footer-wrapper">
-        <div class="upper-text-container">
-          <p>
-            1. Available for Qualified Purchasers only. Qualified Purchasers
-            purchasing an eligible Mac/iPad (“Eligible Product”) with eligible
-            AirPods/accessory (“Promotion Product”) from a Qualifying Location
-            through September 30, 2025 will receive Promotion Savings (up to
-            $199, not to exceed the price of the Promotion Product). Customers
-            will be charged for all items in their cart, including the Promotion
-            Product. Only one Promotion Product per Eligible Product per
-            Qualified Purchaser. Offer subject to availability. While supplies
-            last. Additional restrictions apply. View full offer terms
-            <a
-              href="https://www.apple.com/us-edu/shop/back-to-school/terms-conditions"
-              >here</a
-            >
-          </p>
-          <p>
-            2. Hearing Aid and Hearing Test: The Hearing Aid feature has
-            received FDA authorization. The Hearing Test and Hearing Aid
-            features are supported on AirPods Pro 2 with the latest firmware
-            paired with a compatible iPhone or iPad with iOS 18 or iPadOS 18 and
-            later and are intended for people 18 years old or older. The Hearing
-            Aid feature is also supported on a compatible Mac with macOS Sequoia
-            and later. It is intended for people with perceived mild to moderate
-            hearing loss. Hearing Protection: The Hearing Protection feature
-            works with AirPods Pro 2 with the latest firmware when paired with a
-            compatible iPhone, iPad, or Mac with iOS 18, iPadOS 18, or macOS
-            Sequoia and later. Feature is only available in the U.S. and Canada.
-            See
-            <a href="https://support.apple.com/en-us/120850"
-              >support.apple.com/120850</a
-            >
-            for total attenuation and more information. The Hearing Protection
-            feature is not suitable for protection against extremely loud
-            impulse sounds, such as gunfire, fireworks, or jackhammers, or
-            against sustained sounds louder than 110 dBA.
-          </p>
-          <p>
-            3. Trade‑in values will vary based on the condition, year, and
-            configuration of your eligible trade‑in device. Not all devices are
-            eligible for credit. You must be at least the age of majority to be
-            eligible to trade in for credit or for an Apple Gift Card. Trade‑in
-            value may be applied toward qualifying new device purchase, or added
-            to an Apple Gift Card. Actual value awarded is based on receipt of a
-            qualifying device matching the description provided when estimate
-            was made. Sales tax may be assessed on full value of a new device
-            purchase. In‑store trade‑in requires presentation of a valid photo
-            ID (local law may require saving this information). Offer may not be
-            available in all stores, and may vary between in‑store and online
-            trade‑in. Some stores may have additional requirements. Apple or its
-            trade‑in partners reserve the right to refuse, cancel, or limit
-            quantity of any trade‑in transaction for any reason. More details
-            are available from Apple’s trade-in partner for trade‑in and
-            recycling of eligible devices. Restrictions and limitations may
-            apply.
-          </p>
-          <p>
-            To access and use all Apple Card features and products available
-            only to Apple Card users, you must add Apple Card to Wallet on an
-            iPhone or iPad that supports and has the latest version of iOS or
-            iPadOS. Apple Card is subject to credit approval, available only for
-            qualifying applicants in the United States, and issued by Goldman
-            Sachs Bank USA, Salt Lake City Branch.
-          </p>
-          <p>
-            Apple Payments Services LLC, a subsidiary of Apple Inc., is a
-            service provider of Goldman Sachs Bank USA for Apple Card and
-            Savings accounts. Neither Apple Inc. nor Apple Payments Services LLC
-            is a bank.
-          </p>
-          <p>
-            If you reside in the U.S. territories, please call Goldman Sachs at
-            877-255-5923 with questions about Apple Card.
-          </p>
-          <p>
-            Learn more about how Apple Card applications are evaluated at
-            <a href="https://support.apple.com/en-us/102585">
-              support.apple.com/kb/HT209218.</a
-            >
-          </p>
-          <p>
-            Apple Intelligence is available in beta on all iPhone 16 models,
-            iPhone 15 Pro, iPhone 15 Pro Max, iPad mini (A17 Pro), and iPad and
-            Mac models with M1 and later, with Siri and device language set to
-            the same supported language, as part of an iOS 18, iPadOS 18, and
-            macOS Sequoia software update. Supported languages include English,
-            French, German, Italian, Portuguese (Brazil), Spanish, Japanese,
-            Korean, and Chinese (Simplified). More languages are coming over the
-            course of the year, including Vietnamese. Some features may not be
-            available in all regions or languages.
-          </p>
-          <p>
-            A subscription is required for Apple Arcade, Apple Fitness+, Apple
-            Music, and Apple TV+.
-          </p>
-          <p>
-            Features are subject to change. Some features, applications, and
-            services may not be available in all regions or all languages.
-          </p>
-        </div>
-        <div class="footer-links-wrapper">
-          <div class="links-wrapper1">
-            <h3>Shop and Learn</h3>
-            <ul>
-              <li>Store</li>
-              <li>Mac</li>
-              <li>iPad</li>
-              <li>iPhone</li>
-              <li>Watch</li>
-              <li>Vision</li>
-              <li>AirPods</li>
-              <li>TV & Home</li>
-              <li>AirTag</li>
-              <li>Accessories</li>
-              <li>Gift Cards</li>
-            </ul>
-            <h3>Apple Wallet</h3>
-            <ul>
-              <li>Wallet</li>
-              <li>Apple Card</li>
-              <li>Apple Pay</li>
-              <li>Apple Cash</li>
-            </ul>
-          </div>
-          <div class="links-wrapper2">
-            <h3>Account</h3>
-            <ul>
-              <li>Manage Your Apple Account</li>
-              <li>Apple Store Account</li>
-              <li>iCloud.com</li>
-            </ul>
-            <h3>Entertainment</h3>
-            <ul>
-              <li>Apple One</li>
-              <li>Apple TV+</li>
-              <li>Apple Music</li>
-              <li>Apple Arcade</li>
-              <li>Apple Fitness+</li>
-              <li>Apple News+</li>
-              <li>Apple Podcasts</li>
-              <li>Apple Books</li>
-              <li>App Store</li>
-            </ul>
-          </div>
-          <div class="links-wrapper3">
-            <h3>Apple Store</h3>
-            <ul>
-              <li>Find a Store</li>
-              <li>Genius Bar</li>
-              <li>Today at Apple</li>
-              <li>Group Reservations</li>
-              <li>Apple Camp</li>
-              <li>Apple Store App</li>
-              <li>Certified Refurbished</li>
-              <li>Apple Trade In</li>
-              <li>Financing</li>
-              <li>Carrier Deals at Apple</li>
-              <li>Order Status</li>
-              <li>Shopping Help</li>
-              <li></li>
-            </ul>
-          </div>
-          <div class="links-wrapper4">
-            <h3>For Business</h3>
-            <ul>
-              <li>Apple and Business</li>
-              <li>Shop for Business</li>
-            </ul>
-            <h3>For Education</h3>
-            <ul>
-              <li>Apple and Education</li>
-              <li>Shop for K-12</li>
-              <li>Shop for College</li>
-            </ul>
-            <h3>For Healthcare</h3>
-            <ul>
-              <li>Apple in Healthcare</li>
-              <li>Mac in Healthcare</li>
-              <li>Health on Apple Watch</li>
-              <li>Health Records on iPhone and iPad</li>
-            </ul>
-            <h3>For Government</h3>
-            <ul>
-              <li>Shop for Government</li>
-              <li>Shop for Veterans and Military</li>
-            </ul>
-          </div>
-          <div class="links-wrapper5">
-            <h3>Apple Values</h3>
-            <ul>
-              <li>Accessibility</li>
-              <li>Education</li>
-              <li>Environment</li>
-              <li>Inclusion and Diversity</li>
-              <li>Privacy</li>
-              <li>Racial Equity and Justice</li>
-              <li>Supply Chain Innovation</li>
-            </ul>
-            <h3>About Apple</h3>
-            <ul>
-              <li>Newsroom</li>
-              <li>Apple Leadership</li>
-              <li>Career Opportunities</li>
-              <li>Investors</li>
-              <li>Ethics & Compliance</li>
-              <li>Events</li>
-              <li>Contact Apple</li>
-            </ul>
-          </div>
-        </div>
-        <div class="my-apple-wrapper">
-          More ways to shop:
-          <a href="https://www.apple.com/retail/">Find an Apple Store</a> or
-          <a href="https://locate.apple.com/">other retailer</a> near you. Or
-          call <a href="tel:1-800-692-7753">1-800-MY-APPLE</a> (1-800-692-7753).
-        </div>
-        <div class="copyright-wrapper">
-          <div class="copy-right">
-            Copyright © 2025 Apple Inc. All rights reserved.
-          </div>
-          <div class="footer-links-terms">
-            <ul>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#"> Terms of Use</a></li>
-              <li><a href="#">Sales and Refunds</a></li>
-              <li><a href="#"> Legal</a></li>
-              <li><a href="#"> Site Map</a></li>
-            </ul>
-          </div>
-          <div class="footer-country">
-            <div class="flag-wrapper">
-              <img src="images/icons/16.png" alt="" />
-            </div>
-            <div class="footer-country-name">United States</div>
-          </div>
-        </div>
-      </footer>
+ <!-- starting of footer section -->
+<footer class="footer-wrapper">
+  <div class="upper-text-container">
+    <p>
+      1. Available for Qualified Purchasers only. Qualified Purchasers
+      purchasing an eligible Mac/iPad (“Eligible Product”) with eligible
+      AirPods/accessory (“Promotion Product”) from a Qualifying Location
+      through September 30, 2025 will receive Promotion Savings (up to
+      $199, not to exceed the price of the Promotion Product). Customers
+      will be charged for all items in their cart, including the Promotion
+      Product. Only one Promotion Product per Eligible Product per
+      Qualified Purchaser. Offer subject to availability. While supplies
+      last. Additional restrictions apply. View full offer terms
+      <a href="https://www.apple.com/us-edu/shop/back-to-school/terms-conditions"
+        >here</a
+      >.
+    </p>
+    <p>
+      2. Hearing Aid and Hearing Test: The Hearing Aid feature has received FDA
+      authorization. The Hearing Test and Hearing Aid features are supported on
+      AirPods Pro 2 with the latest firmware paired with a compatible iPhone or
+      iPad with iOS 18 or iPadOS 18 and later and are intended for people 18
+      years old or older. ...
+    </p>
+    <p>
+      3. Trade-in values will vary based on the condition, year, and
+      configuration of your eligible trade-in device. ...
+    </p>
+    <p>
+      Learn more about how Apple Card applications are evaluated at
+      <a href="https://support.apple.com/en-us/102585">
+        support.apple.com/kb/HT209218
+      </a>.
+    </p>
+  </div>
+
+  <div class="footer-links-wrapper">
+    <div class="links-wrapper1">
+      <h3>Shop and Learn</h3>
+      <ul>
+        <li>Store</li>
+        <li>Mac</li>
+        <li>iPad</li>
+        <li>iPhone</li>
+        <li>Watch</li>
+        <li>Vision</li>
+        <li>AirPods</li>
+        <li>TV & Home</li>
+        <li>AirTag</li>
+        <li>Accessories</li>
+        <li>Gift Cards</li>
+      </ul>
+
+      <h3>Apple Wallet</h3>
+      <ul>
+        <li>Wallet</li>
+        <li>Apple Card</li>
+        <li>Apple Pay</li>
+        <li>Apple Cash</li>
+      </ul>
     </div>
+
+    <div class="links-wrapper2">
+      <h3>Account</h3>
+      <ul>
+        <li>Manage Your Apple Account</li>
+        <li>Apple Store Account</li>
+        <li>iCloud.com</li>
+      </ul>
+
+      <h3>Entertainment</h3>
+      <ul>
+        <li>Apple One</li>
+        <li>Apple TV+</li>
+        <li>Apple Music</li>
+        <li>Apple Arcade</li>
+        <li>Apple Fitness+</li>
+        <li>Apple News+</li>
+        <li>Apple Podcasts</li>
+        <li>Apple Books</li>
+        <li>App Store</li>
+      </ul>
+    </div>
+
+    <div class="links-wrapper3">
+      <h3>Apple Store</h3>
+      <ul>
+        <li>Find a Store</li>
+        <li>Genius Bar</li>
+        <li>Today at Apple</li>
+        <li>Group Reservations</li>
+        <li>Apple Camp</li>
+        <li>Apple Store App</li>
+        <li>Certified Refurbished</li>
+        <li>Apple Trade In</li>
+        <li>Financing</li>
+        <li>Carrier Deals at Apple</li>
+        <li>Order Status</li>
+        <li>Shopping Help</li>
+      </ul>
+    </div>
+
+    <div class="links-wrapper4">
+      <h3>For Business</h3>
+      <ul>
+        <li>Apple and Business</li>
+        <li>Shop for Business</li>
+      </ul>
+
+      <h3>For Education</h3>
+      <ul>
+        <li>Apple and Education</li>
+        <li>Shop for K-12</li>
+        <li>Shop for College</li>
+      </ul>
+
+      <h3>For Healthcare</h3>
+      <ul>
+        <li>Apple in Healthcare</li>
+        <li>Mac in Healthcare</li>
+        <li>Health on Apple Watch</li>
+        <li>Health Records on iPhone and iPad</li>
+      </ul>
+
+      <h3>For Government</h3>
+      <ul>
+        <li>Shop for Government</li>
+        <li>Shop for Veterans and Military</li>
+      </ul>
+    </div>
+
+    <div class="links-wrapper5">
+      <h3>Apple Values</h3>
+      <ul>
+        <li>Accessibility</li>
+        <li>Education</li>
+        <li>Environment</li>
+        <li>Inclusion and Diversity</li>
+        <li>Privacy</li>
+        <li>Racial Equity and Justice</li>
+        <li>Supply Chain Innovation</li>
+      </ul>
+
+      <h3>About Apple</h3>
+      <ul>
+        <li>Newsroom</li>
+        <li>Apple Leadership</li>
+        <li>Career Opportunities</li>
+        <li>Investors</li>
+        <li>Ethics & Compliance</li>
+        <li>Events</li>
+        <li>Contact Apple</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="my-apple-wrapper">
+    More ways to shop:
+    <a href="https://www.apple.com/retail/">Find an Apple Store</a> or
+    <a href="https://locate.apple.com/">other retailer</a> near you. Or call
+    <a href="tel:1-800-692-7753">1-800-MY-APPLE</a> (1-800-692-7753).
+  </div>
+
+  <div class="copyright-wrapper">
+    <div class="copy-right">
+      Copyright © 2025 Apple Inc. All rights reserved.
+    </div>
+    <div class="footer-links-terms">
+      <ul>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms of Use</a></li>
+        <li><a href="#">Sales and Refunds</a></li>
+        <li><a href="#">Legal</a></li>
+        <li><a href="#">Site Map</a></li>
+      </ul>
+    </div>
+    <div class="footer-country">
+      <div class="flag-wrapper">
+        <img src="images/icons/16.png" alt="Country Flag" />
+      </div>
+      <div class="footer-country-name">United States</div>
+    </div>
+  </div>
+</footer>
+
+    </div>
+    <script src="js/jQuery.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
